# dirsync

./: README.md  install.sh
docs/: Developer documentation.md  README.md  User documentation.md  proposal-dirsync.md  specification.md
examples/general-usage/: README.md
examples/general-usage/source/: .dirsync.json
examples/mirror-configurations/: README.md
examples/mirror-configurations/source/new-subdirectory/: .dirsync.json  text.txt
examples/renaming-conflict-strategy/: README.md
src/: .clang-format  .gitignore  CMakeLists.txt  Developer documentation.md  Doxyfile  README.md  arguments.cpp  arguments.hpp  constants.hpp  diagram.plantuml  help.cpp  help.hpp  main.cpp  synchronize.cpp  synchronize.hpp  synchronize_one_way.cpp  synchronize_one_way.hpp  synchronize_two_way.cpp  synchronize_two_way.hpp  test-parsing.json  tests.cpp  tests.hpp  wildcards.cpp  wildcards.hpp
src/configuration/: configuration-json.cpp  configuration-json.hpp  configuration.cpp  configuration.hpp
